코드와 view매칭 중
hover했을때 dialog부분 수정중...

hover했을때, 선택된 것의 부모들 전부 hover되는 문제 수정중

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 /* Created by Kten on 2015-07-01 */
 
+.livedit-btn-list{ min-width: 110px; min-height: 40px; margin: auto; padding: 0px; float:left; }
+.livedit-btn-list li{ list-style:none; float:left; }
+
 .livedit-button { width: 100px; height : 30px; border: 2px solid #26822D; border-radius: 10px; background: #fff; cursor: pointer; }
 .livedit-button:hover{ background: #26822D; color: #fff;}
-.livedit-save-button{ width: 200px; margin-bottom: 10px; }
-.livedit-margin-last-button{margin-bottom: 0px;}
+
+.livedit-squer-icon{ margin-left: 6px; }
+.livedit-squer-icon:hover{ opacity: 0.3; cursor: pointer; }
+
+.livedit-squer-img{ width: 30px; height: 30px;}
