Livedit Context Menu 로 실행 되도록 추가 Websocket모듈에 tool 추가 Websocket으로 받아서 inspect 모드 test 완료 remove Attribute, removeNode 구현

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 .livedit-button { width: 100px; height : 30px; border: 2px solid #26822D; border-radius: 10px; background: #fff; cursor: pointer; }
 .livedit-button:hover{ background: #26822D; color: #fff;}
 
-.livedit-squer-icon{ margin-left: 6px; }
-.livedit-squer-icon:hover{ opacity: 0.3; cursor: pointer; }
+.livedit-square-icon{ margin-left: 6px; }
+.livedit-square-icon:hover{ opacity: 0.3; cursor: pointer; }
 
-.livedit-squer-img{ width: 30px; height: 30px;}
+.livedit-square-img{ width: 30px; height: 30px;}
